# telepirate

./: .gitignore  Cargo.toml  README.md
database/: db  snap.000000000000042A
scripts/: debian-bootstrap.sh  ubuntu-bootstrap.sh
service-files/: telepirate-openrc
src/: bot.rs  database.rs  logger.rs  main.rs  misc.rs  pirate.rs
systemd-services/: telepirate.service
