[package]
name = "telepirate"
version = "0.1.0"
edition = "2021"

[profile.dev]
strip = true
opt-level = 1
codegen-units = 256

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
colored = { version = "2.0.0", features = ["no-color"] }
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4.19"
ngrok = { version = "0.12.4", features = ["axum"] }
teloxide = { version = "0.12.2", features = ["webhooks-axum", "macros"] }
tokio = { version = "1.29.0", features = ["rt-multi-thread", "macros"] }
ytd-rs = { version = "0.1.7", features = ["yt-dlp"] }
