[package]
name = "telepirate"
version = "1.0.0"
edition = "2021"

[profile.dev]
strip = true
opt-level = 0
codegen-units = 256

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
colored = { version = "2.0.0", features = ["no-color"] }
crossterm = "0.27.0"
ctrlc = { version = "3.4.1", features = ["termination"] }
fern = { version = "0.6.2", features = ["colored"] }
futures = "0.3.28"
glob = "0.3.1"
humantime = "2.1.0"
log = "0.4.19"
ngrok = { version = "0.12.4", features = ["axum"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sled = "0.34.7"
teloxide = { version = "0.12.2", features = ["webhooks-axum", "macros"] }
terminal_size = "0.2.6"
tokio = { version = "1.29.0", features = ["rt-multi-thread", "macros"] }
ytd-rs = { version = "0.1.7", features = ["yt-dlp"] }
